<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ordering</string>
    <string name="action_settings">Settings</string>
    <string name="tab_widget_discount_content_description">打折icon</string>
    <string name="tab_widget_discount_text">打折</string>
    <string name="tab_widget_order_content_description">订餐icon</string>
    <string name="tab_widget_order_text">订餐</string>
    <string name="tab_widget_user_content_description">个人中心icon</string>
    <string name="tab_widget_user_text">个人</string>
    <string name="tab_widget_more_content_description">更多icon</string>
    <string name="tab_widget_more_text">更多</string>
    <string name="activity_register_edit_register_name">昵称</string>
    <string name="activity_register_edit_register_email">邮箱</string>
    <string name="activity_register_edit_register_password">密码</string>
    <string name="activity_register_btn_register">注册</string>
    <string name="activity_login_edit_login_email">邮箱</string>
    <string name="activity_login_edit_login_password">密码</string>
    <string name="activity_login_btn_login">登录</string>
    <string name="activity_login_text_register">没账号?免费注册</string>
    <string name="activity_discount_item_img_tip">图片</string>
    <string name="activity_input_type">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-=+._@</string>
    <string name="frament_user_text_login">你还没有登陆~</string>
    <string name="frament_user_btn_login">登陆</string>
    <string name="activity_login_label">登陆</string>
    <string name="activity_register_label">注册</string>
     <string name="fragment_discount_list_view_content_img_view_content_description">打折活动图片</string>
     <string name="bottom_tab_image_view_content_description">底栏菜单图片</string>
      <string name="fragment_user_logined_text_vipintegral">账户积分：</string>
     <string name="fragment_user_logined_imageview_img">用户头像</string>
     <string name="fragment_user_logined_btn_myordering">我的订单</string>
     <string name="activity_confiremorder_btn_confiremorder">现场点餐</string>
     <string name="fragment_order_btn_refreshlocation">刷新</string>

     <string name="mylistview_header_hint_normal">下拉刷新</string>
    <string name="mylistview_header_hint_ready">松开刷新数据</string>
    <string name="mylistview_header_hint_loading">正在加载…</string>
    <string name="mylistview_header_last_time">上次更新时间：</string>
    <string name="mylistview_footer_hint_normal">查看更多</string>
    <string name="mylistview_footer_hint_ready">松开载入更多</string>
    
    <string name="activity_confiremorder_text_goodsname">菜名</string>
    <string name="activity_confiremorder_text_goodsnumber">数量</string>
    <string name="activity_confiremorder_text_goodsprice">价格</string>
    <string name="activity_confiremorder_btn_booking">提前预定</string>
    
    <string name="activity_disheslist_btn_confirem">确定</string>
    <string name="activity_disheslist_btn_check">查看订单</string>
    
     <string name="activity_myorder_text_goodsname">菜名</string>
    <string name="activity_myorder_text_goodsnumber">数量</string>
    <string name="activity_myorder_text_goodsprice">价格</string>
    <string name="activity_myorder_btn_ok">完成订单</string>
    <string name="activity_myorder_txt_myorder">我的订单：</string>
    
    <string name="dialogview_txt_more">更多:</string>
    <string name="dialogview_restnumber">此菜品还剩:</string>
    
    <string name="datatimg_activity_year">2014</string>
    <string name="datatimg_activity_month">1</string>
    <string name="datatimg_activity_day">1</string>
    <string name="datatimg_activity_hour">1</string>
</resources>