<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_myorder_txt_myorder" 
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_myorder_txt_time"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal"
        >
        <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="5" 
	        android:text="@string/activity_myorder_text_goodsname"
        />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/activity_myorder_text_goodsnumber"
	        />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2" 
	        android:gravity="center"
	        android:text="@string/activity_myorder_text_goodsprice"
	        />
    </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    >
	    <ListView
	        android:id="@+id/activity_myorder_listview"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="9"
	        />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_myorder_btn_ok" 
        android:text="@string/activity_myorder_btn_ok"
        android:layout_gravity="center"
        />
</LinearLayout>
