<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal"
        >
        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5" 
        android:text="@string/activity_confiremorder_text_goodsname"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/activity_confiremorder_text_goodsnumber"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2" 
        android:gravity="center"
        android:text="@string/activity_confiremorder_text_goodsprice"
        android:textSize="20sp"
        />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    <ListView
        android:id="@+id/activity_confiremorder_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="9"
        />
    <Button
        android:id="@+id/activity_confiremorder_btn_confiremorder"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/activity_confiremorder_btn_confiremorder" 
        />
    <Button
        android:id="@+id/activity_confiremorder_btn_booking"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/activity_confiremorder_btn_booking" 
        />
    </LinearLayout>
</LinearLayout>
