<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:orientation="horizontal" 
	    >
	    <ImageView
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:contentDescription="@string/fragment_user_logined_imageview_img"
	        android:id="@+id/fragment_user_logined_img_loginimgview" 
	        />
	    <LinearLayout
	         android:layout_width="0dp"
	         android:layout_height="match_parent"
	         android:orientation="vertical"
	         android:layout_weight="2"
	        >
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:id="@+id/fragment_user_logined_text_loginname" 
	            />
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" 
	            >
	            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/fragment_user_logined_text_vipintegral" 
	            />
	            <TextView  
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/fragment_user_logined_text_integral"/>
	        </LinearLayout>
	    </LinearLayout>
	</LinearLayout>
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/fragment_user_logined_btn_myordering"
	    android:id="@+id/fragment_user_logined_btn_myordering"
	    />
</LinearLayout>
