<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   		android:orientation="horizontal" 
   		android:layout_gravity="center_horizontal"
        >
        <EditText
            android:layout_width="60dp"
            android:id="@+id/datatimg_activity_year"
            android:layout_height="wrap_content"
            android:text="@string/datatimg_activity_year" 
            android:inputType="number" 
            android:gravity="center" 
            android:maxLength="4"        
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" 
            android:text="年"
            android:gravity="center" 
            />
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
             android:id="@+id/datatimg_activity_month"
            android:text="@string/datatimg_activity_month" 
            android:inputType="number"  
            android:gravity="center"
            android:maxLength="2"        
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" 
            android:text="月"
            android:gravity="center" 
            />
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/datatimg_activity_day"
            android:text="@string/datatimg_activity_day" 
            android:inputType="number" 
            android:gravity="center"
            android:maxLength="2"         
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" 
            android:text="日"
            android:gravity="center" 
            />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"  
            />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
         <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/datatimg_activity_hour"
            android:text="@string/datatimg_activity_hour" 
            android:inputType="number" 
            android:gravity="center" 
            android:maxLength="2"         
            />
         <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" 
            android:text="时"
            android:gravity="center" 
            />
    </LinearLayout>

</LinearLayout>
